# Sisal

./: README.md
sisal-14.1.0/: NEWS  configure  configure.ac
sisal-14.1.0/Backend/If1ld/: if1smash.c  ifxstuff.c
sisal-14.1.0/Backend/If1opt/: AssignIDs.c  Makefile.am  Makefile.in  callreorder.c  if1count.c  if1dope.c  if1gcse.c  pprint.c  world.h
sisal-14.1.0/Backend/If2gen/: Makefile.in  gen.c  if2aimp.c  if2loop.c  if2prebuild.c  if2temp.c  if2vector.c  if2yank.c  sisal.h  world.h
sisal-14.1.0/Backend/If2mem/: Makefile.am  Makefile.in  if2mem.c  if2size.c
sisal-14.1.0/Backend/If2part/: Makefile.in  if2count.c  part.c  slice.c  stream.c
sisal-14.1.0/Backend/If2up/: if2class.c  if2noop.c  if2owner.c  if2pprint.c  if2refcnt.c  if2replace.c  up.c
sisal-14.1.0/Frontend/Experimental/: IDList.hh  SP.hh  Type.hh  basicInfo.hh  edge.cc  functionInfo.hh  graph.cc  info.cc  lexer.l  literal.hh  semanticBase.cc  stamp.cc  token.hh
sisal-14.1.0/Frontend/Front1/: Makefile.am  sisal.5
sisal-14.1.0/Frontend/mySAL/: interface.py  lexer.l  makefile.in  parser.y
sisal-14.1.0/Frontend/mySALc/: pyTest.py  sisalmath.py
sisal-14.1.0/Include/: sisalInfo.h.in
sisal-14.1.0/Infrastructure/: ChainType.cc  CompoundGraph.hh  EdgeCluster.hh  FieldType.hh  FunctionType.hh  IF.hh  fixif1.py  makefile
sisal-14.1.0/Runtime/: Makefile.in
sisal-14.1.0/Runtime/AlliantModel/: Makefile.am
sisal-14.1.0/Runtime/CrayModel/: lock-implementation.h
sisal-14.1.0/Runtime/EncoreModel/: Makefile.in  lock-implementation.h  parallelism.h  process-implementation.h
sisal-14.1.0/Runtime/PThreadsModel/: parallelism.h  process-implementation.h
sisal-14.1.0/Runtime/SequentModel/: lock-implementation.h  parallelism.h
sisal-14.1.0/Runtime/SerialModel/: parallelism.h
sisal-14.1.0/Runtime/Sharedlib/: p-pointer.c  p-ppp.c  p-ready.c  p-signal.c  p-timer.c  p-util.c  process.h
sisal-14.1.0/Runtime/SolarisModel/: lock-implementation.h  parallelism.h
sisal-14.1.0/Tests/: 8queens.ans  Makefile.in  quicksort.ans
sisal-14.1.0/Tools/sisalc/: Makefile.am  Makefile.in  charStarQueue.c  charStarQueue.h  if1ld.c  if2gen.c  sisal.c  sisalc.c
sisal-14.1.0/sisalmode/: README  ecmd  sisal-mode.el
sisal14.0.0/: LICENSE.LLNL  LICENSE.SISALRC  configure  configure.in  makefile.in
sisal14.0.0/Backend/If1ld/: if1names.c  if1smash.c  ld.c  world.h
sisal14.0.0/Backend/If1opt/: AssignIDs.c  callreorder.c  cascade.c  check.c  classic.c  count.c  if1check.c  if1count.c  if1cse.c  if1dead.c  if1explode.c  if1fold.c  if1fusion.c  if1gcse.c  if1inline.c  if1move.c  if1normal.c  if1parallel.c  if1pprint.c  if1reduce.c  if1split.c  if1unroll.c  ifxstuff.c  opt.c  pprint.c  world.h
sisal14.0.0/Backend/If2gen/: gen.c  if2array.c  if2fibre.c  if2free.c  if2interface.c  if2loop.c  if2opt.c  if2preamble.c  if2print.c  if2sdbx.c  if2select.c  if2smash.c  if2temp.c  if2ureduce.c  if2vector.c  if2yank.c  world.h
sisal14.0.0/Backend/If2mem/: if2size.c  ifxstuff.c  makefile.in  mem.c  world.h
sisal14.0.0/Backend/If2part/: if2cost.c  if2modules.c  if2part.c  makefile.in  part.c  report.c  stream.c  vector.c  world.h
sisal14.0.0/Backend/If2up/: if2class.c  if2const.c  if2marks.c  if2pprint.c  if2refcntopt.c  if2rwset.c  if2up.c  ifxstuff.c  makefile.in  pprint  pprint.c  up.c  world.h
sisal14.0.0/Frontend/Experimental/: Definition.hh  Expression.hh  Function.hh  IFObject.cc  IFObject.hh  ModuleBody.hh  SisalLexer.hh  SisalParser.cc  SisalParser.hh  Type.hh  deriveActions.py  edge.cc  edge.hh  graph.cc  graph.hh  ifront.cc  ifx.hh  info.cc  info.hh  lexer.l  literal.cc  literal.hh  makefile.in  mangle.hh  module.cc  module.hh  node.cc  node.hh  parser.y  semanticBase.cc  semanticBase.hh  sicaly  stamp.hh
sisal14.0.0/Frontend/Front1/: file1.c  file2.c  file3.c  frontend.h  makefile.in  p2c.h  p2clib.c  sisal.5  sisal.c
sisal14.0.0/Frontend/mySAL/: interface.py  lexer.l  makefile.in  parser.y
sisal14.0.0/Frontend/mySALc/: makefile.in  mysalmodule.c  pyTest.py  sisalrt.py
sisal14.0.0/Include/: acconfig.h  makefile.inc.in  sisalConfig.h.in  sisalPaths.h.in
sisal14.0.0/Infrastructure/: ChainType.hh  Compound.hh  EdgeCluster.cc  FunctionType.cc  IFObject.hh  Pragma.cc  Stamp.cc  Use.cc  standardize.py
sisal14.0.0/Runtime/AlliantModel/: lock-implementation.h  parallelism.h  process-implementation.h
sisal14.0.0/Runtime/CrayModel/: lock-implementation.h  parallelism.h  process-implementation.h
sisal14.0.0/Runtime/EncoreModel/: lock-implementation.h  parallelism.h  process-implementation.h
sisal14.0.0/Runtime/IBMPower4Model/: lock-implementation.h  parallelism.h  process-implementation.h
sisal14.0.0/Runtime/PThreadsModel/: detect  lock-implementation.h  parallelism.h  process-implementation.h
sisal14.0.0/Runtime/SGIModel/: lock-implementation.h  parallelism.h  process-implementation.h
sisal14.0.0/Runtime/SequentModel/: lock-implementation.h  parallelism.h  process-implementation.h
sisal14.0.0/Runtime/SerialModel/: lock-implementation.h  parallelism.h  process-implementation.h
sisal14.0.0/Runtime/Sharedlib/: READ.c  arrays.h  interface.h  locks.h  makefile.in  options.h  p-dsa.c  p-error.c  p-fibre.c  p-globals.c  p-init.c  p-interface.c  p-pointer.c  p-ppp.c  p-ready.c  p-sdbx.c  p-signal.c  p-spawn.c  p-timer.c  p-tracer.c  p-util.c  p-wait.c  p-worker.c  process.h  s.out.1  sisalrt.h  sisalrt.h.in  srt0.c  vectorIO.c
sisal14.0.0/Runtime/SolarisModel/: lock-implementation.h  parallelism.h  process-implementation.h
sisal14.0.0/Tests/: 8queens.ans  bubble.ans  makefile
sisal14.0.0/Tools/osc/: makefile.in  options  options.h  osc.c  spp2.c  spprun  spprun.c
sisal14.0.0/Tools/sisalc/: charStarQueue.c  charStarQueue.h  compile.c  if1ld.c  if1opt.c  if2gen.c  if2mem.c  if2part.c  if2up.c  linker.c  makefile.in  option.c  option.h  sisal.c  sisalc.c  sisalc.h
src/Backend/If2gen/: Makefile.am  if2free.c  if2names.c  if2opt.c  if2preamble.c  if2record.c  if2sdbx.c  ifxstuff.c
src/Backend/If2up/: Makefile.am  pprint.c  (+4 more)
src/Tests/: Makefile.am  bubble.in  crypto.ans  fromC.ans  fromCdriver.c  run-test
(+429 files in other folders)
