LDADD = ../Library/libifx.a

LDFLAGS = -lm

pkglibexec_PROGRAMS = if1opt if1pprint if1count if1check

if1opt_SOURCES = opt.c AssignIDs.c callreorder.c cascade.c if1cse.c if1dead.c if1dope.c if1explode.c if1fission.c if1fold.c if1fusion.c if1gcse.c if1inline.c if1invar.c if1invert.c if1move.c if1normal.c if1parallel.c if1reduce.c if1split.c if1unroll.c ifxstuff.c util.c world.h

if1pprint_SOURCES = pprint.c if1pprint.c ifxstuff.c util.c world.h

if1count_SOURCES = count.c if1count.c ifxstuff.c util.c world.h

if1check_SOURCES = check.c if1check.c ifxstuff.c util.c world.h
