LDADD = ../Library/libifx.a

pkglibexec_PROGRAMS = if2gen

if2gen_SOURCES = gen.c if2aimp.c if2array.c if2fibre.c if2free.c if2interface.c if2loop.c if2names.c if2opt.c if2preamble.c if2prebuild.c if2print.c if2record.c if2sdbx.c if2select.c if2smash.c if2temp.c if2ureduce.c if2vector.c if2yank.c ifxstuff.c world.h

pkginclude_HEADERS = sisal.h
