LDADD = ../Library/libifx.a

pkglibexec_PROGRAMS = if2up if2pprint

if2up_SOURCES = up.c if2ade.c if2call.c if2class.c if2const.c if2count.c if2marks.c if2migrate.c if2noop.c if2owner.c if2refcnt.c if2refcntopt.c if2replace.c if2rwset.c if2up.c ifxstuff.c world.h

if2pprint_SOURCES = pprint.c if2pprint.c ifxstuff.c world.h
